Design feedback: fix gaps between collections + to edge, fix font
SRFCMSAL-1133

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -5,15 +5,26 @@
 .collection {
   display: flex;
   flex-direction: column;
-  margin: 8px 8px 16px;
+  margin: 8px 0 16px;
+  max-width: $desktop-wide-size;
   border-radius: 2px;
   background-color: #f5f5f2;
   box-shadow: $shadow-elevation1;
+
+  @include tablet-up {
+    margin-bottom: 32px;
+  }
+
+  @include desktop-wide {
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .collection__title {
   margin: 16px 24px 12px;
-  font-family: $font-medium;
+  font-family: $font-medium-display;
   font-size: 24px;
   font-weight: 500;
   font-style: normal;
